--- a/avaje-simple-logger/src/test/resources/avaje-logger-test.properties
+++ b/avaje-simple-logger/src/test/resources/avaje-logger-test.properties
@@ -1,10 +1,4 @@
-logger.writer=plain
+## can set config including log levels here
 
-# values - full, short, <int target length>
-#logger.nameTargetLength=full
-logger.nameTargetLength=short
-#logger.nameTargetLength=10
-
-## log levels, set with a prefix of: log.level.
-log.level.my.other=trace
-log.level.io.avaje=warn
+log.level.org.foo=trace
+log.level.io.avaje.config=trace
