--- a/avaje-simple-json-logger/pom.xml
+++ b/avaje-simple-json-logger/pom.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java11-oss</artifactId>
     <version>5.1</version>
-    <relativePath/>
   </parent>
 
-  <version>0.1</version>
   <groupId>io.avaje</groupId>
-  <artifactId>avaje-simple-logger</artifactId>
-  <name>avaje-simple-dynamic-logger</name>
-  <description>Supports dynamically changing log levels via avaje config</description>
+  <artifactId>avaje-simple-json-logger</artifactId>
+  <version>0.1</version>
+
+  <name>avaje-simple-logger</name>
+  <description>Simple json logger for SLF4J</description>
 
   <properties>
     <maven.compiler.release>11</maven.compiler.release>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -27,20 +26,19 @@
       <artifactId>slf4j-api</artifactId>
       <version>2.0.17</version>
     </dependency>
+
     <dependency>
       <groupId>io.avaje</groupId>
-      <artifactId>avaje-simple-json-logger</artifactId>
-      <version>0.1</version>
+      <artifactId>avaje-json-core</artifactId>
+      <version>3.5</version>
     </dependency>
+
     <dependency>
-      <groupId>io.avaje</groupId>
-      <artifactId>avaje-applog-slf4j</artifactId>
-      <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>io.avaje</groupId>
-      <artifactId>avaje-config</artifactId>
-      <version>4.1</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <type>test-jar</type>
+      <version>2.0.17</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
