Tidy Bootstrap, DateTimeFormatter, javadoc

--- a/avaje-simple-json-logger/src/test/resources/avaje-logger-test.properties
+++ b/avaje-simple-json-logger/src/test/resources/avaje-logger-test.properties
@@ -4,6 +4,8 @@ logger.writer=plain
 #logger.nameTargetLength=full
 logger.nameTargetLength=short
 #logger.nameTargetLength=10
+#logger.timezone=UTC
+#logger.timestampPattern=ISO_INSTANT
 
 ## log levels, set with a prefix of: log.level.
 log.level.my.other=trace
