--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java11-oss</artifactId>
-    <version>4.5</version>
+    <version>5.1</version>
     <relativePath/>
   </parent>
 
   <groupId>io.avaje</groupId>
-  <artifactId>logger-reactor</artifactId>
-  <version>1</version>
+  <artifactId>avaje-simple-logger-reactor</artifactId>
+  <version>0.1</version>
   <packaging>pom</packaging>
 
   <modules>
