--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-simple-logger-reactor</artifactId>
+  <name>avaje-simple-logger-reactor</name>
   <version>0.1</version>
   <packaging>pom</packaging>
 
