--- a/avaje-simple-logger/pom.xml
+++ b/avaje-simple-logger/pom.xml
@@ -4,14 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.avaje</groupId>
-    <artifactId>java11-oss</artifactId>
-    <version>5.1</version>
-    <relativePath/>
+    <groupId>io.avaje</groupId>
+    <artifactId>avaje-simple-logger-parent</artifactId>
+    <version>0.2</version>
   </parent>
 
-  <version>0.1</version>
-  <groupId>io.avaje</groupId>
   <artifactId>avaje-simple-logger</artifactId>
   <name>avaje-simple-logger</name>
   <description>Supports dynamically changing log levels via avaje config</description>
@@ -30,7 +27,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-simple-json-logger</artifactId>
-      <version>0.1</version>
+      <version>0.2</version>
     </dependency>
     <dependency>
       <groupId>io.avaje</groupId>
