--- a/avaje-simple-logger/src/test/resources/avaje-logger-test.properties
+++ b/avaje-simple-logger/src/test/resources/avaje-logger-test.properties
@@ -1,5 +1,8 @@
 ## can set config including log levels here
 
+logger.environment=${env:dev}
+logger.component=${my.prop:my-app}
+
 log.level.org.foo=trace
 log.level.io.avaje.config=trace
 log.level.io.avaje.simplelogger=debug
