--- a/avaje-simple-logger/pom.xml
+++ b/avaje-simple-logger/pom.xml
@@ -31,6 +31,11 @@
     </dependency>
     <dependency>
       <groupId>io.avaje</groupId>
+      <artifactId>avaje-applog</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
       <artifactId>avaje-applog-slf4j</artifactId>
       <version>1.0</version>
     </dependency>
