Add graalvm feature to support System.Logger and slf4j-jdk-platform-logging
This could well move into avaje-simple-logger rather than be this separate
module. Just not 100% sure if that is the right thing to do yet, so putting
it here in this separate module until we are sure.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <modules>
     <module>avaje-simple-json-logger</module>
     <module>avaje-simple-logger</module>
+    <module>graalvm-feature</module>
   </modules>
 
 </project>
