Support for slf4j-jdk-platform-logging with GraalVM (build time initialization)
Will do build time initialization of avaje simple logger classes with graalvm
native image, and thus support the use of slf4j-jdk-platform-logging.

This is required due to graalvm native-image wanting to initialise jdk logging
at build time (which is a bit viral and means the logger implementation needs
to support build time initialisation as well).

--- a/avaje-simple-logger/pom.xml
+++ b/avaje-simple-logger/pom.xml
@@ -44,6 +44,12 @@
       <artifactId>avaje-config</artifactId>
       <version>4.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.graalvm.nativeimage</groupId>
+      <artifactId>svm</artifactId>
+      <version>25.0.1</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>io.avaje</groupId>
