--- a/avaje-simple-json-logger/pom.xml
+++ b/avaje-simple-json-logger/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.avaje</groupId>
     <artifactId>avaje-simple-logger-parent</artifactId>
-    <version>1.0</version>
+    <version>1.1-RC1</version>
   </parent>
 
   <artifactId>avaje-simple-json-logger</artifactId>
