--- a/avaje-simple-logger/pom.xml
+++ b/avaje-simple-logger/pom.xml
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-config</artifactId>
-      <version>4.2</version>
+      <version>5.0-RC1</version>
     </dependency>
     <dependency>
       <groupId>org.graalvm.nativeimage</groupId>
